[tool.poetry]
name = "gong"
version = "0.1.0"
description = ""
authors = ["R202"]

[tool.poetry.dependencies]
python = "^3.11"
flask-caching = "^2.0.2"
authlib = "^1.2.0"
flask-me = "^1.0.2"
flask-wtf = "^1.1.1"
markdown = "^3.5"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"


[tool.poetry.dev-dependencies]
black = "^21.7b0"
watchdog = "^2.1.3"

[tool.poetry.scripts]
gong-web = "gong.cmd.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
